--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,17 @@ img {
 
 /*___________Утилиты___________*/
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 .primery-background {
   background-color: var(--primery-background);
 }
@@ -569,10 +580,14 @@ fill: var(--white-color);
   min-width: 200px;
 
   outline: none;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-section > .btn-hero:hover,
-.hero-section > .btn-hero:focus {
+.hero-container > .btn-hero:hover,
+.hero-container > .btn-hero:focus {
   background-color: #188ce8;
 }
 /* Portfolio */
@@ -668,7 +683,7 @@ fill: var(--white-color);
 
 .footer-social-section {
   display: block;
-  margin: 72px 70px;
+  margin: 72px 0px 72px 90px;
 }
 
 .footer-social-list {
@@ -676,7 +691,7 @@ fill: var(--white-color);
   justify-content: space-between;
 }
 
-.footer-social-title {
+.footer-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -811,7 +826,7 @@ fill: var(--white-color);
   background-color: rgba(0, 0, 0, 0.2);
   transition-property: opacity,visibility;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -819,8 +834,11 @@ fill: var(--white-color);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   width: 528px;
   height: 581px;
+
+  padding: 40px;
 
   background-color: var(--white-color);
 
@@ -842,10 +860,19 @@ fill: var(--white-color);
   }
 
   .modal-close-logo {
-    top: 8px;
-    right: 8px;
-    width: 11px;
-    height: 11px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 18px;
+    height: 18px;
+    transition-property: hover;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-close-logo:hover {
+    fill: var(--accent-color);
   }
 
   .is-hidden {
@@ -853,3 +880,223 @@ fill: var(--white-color);
     visibility: hidden;
     pointer-events: none;
   }
+
+  
+  /*___________MODAL-FORM___________ */
+.modal-form-title {
+  width: 100%;
+
+  margin-bottom: 12px;
+
+  font-family: 'Roboto',sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+
+  line-height: 1.15;
+
+  text-align: center;
+
+  color: var(--title-text-color);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+
+  margin-top: 4px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-input:focus + .modal-input-icon{
+  fill: var(--accent-color);
+}
+
+.modal-form-input-wrapper{
+  position: relative;
+
+}
+
+.modal-input-icon {
+  position: absolute;
+
+  display: block;
+
+  width: 18px;
+  height: 18px;
+
+
+  fill: var(--title-text-color);
+
+  margin-left: 12px;
+
+  left: 0;
+  top:50%;
+  transform: translateY(-50%);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+
+  margin-top: 4px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  resize: none;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-text-descr {
+  display: flex;
+  align-items: center;
+
+  width: 100%;
+  
+  margin-top: 20px;
+  
+}
+
+.modal-form-desc-conditions {
+  color: var(--accent-color);
+  padding-left: 4px;
+}
+
+.modal-form-text-descr::before {
+  display: block;
+  content: '';
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  background-image: url(../images/quarter.svg);
+  
+  transition-property: background-image;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+
+.modal-form-term:checked + .modal-form-text-descr::before {
+  border: none;
+  background-image: url(../images/iconcheck.svg);
+}
+
+.modal-form-button {
+  width: 200px;
+  height: 50px;
+  
+  margin: 30px auto;
+  cursor: pointer;
+
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  font-family: 'Roboto',sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-button:hover,
+.modal-form-button:focus {
+  background-color: #188CE8;
+}
+
+/* ___________FOOTER-SUBMIT_________ */
+.footer-submit {
+  margin: 72px 215px 94px 93px;
+}
+
+.submit-form {
+ display: flex;
+}
+
+.submit-form-btn {
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: 'Roboto',sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  letter-spacing: 0.06em;
+
+  border: none;
+}
+
+.submit-input {
+  width: 385px;
+  height: 50px;
+
+  margin-right: 12px;
+  padding: 15px 16px;
+
+  background-color: var(--second-background);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: var(--white-color);
+}
+
+.submit-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.submit-inpt::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.submit-form-icon {
+  width: 24px;
+  height: 24px;
+
+  margin-left: 10px;
+
+  fill: var(--white-color);
+}
