--- a/css/style.css
+++ b/css/style.css
@@ -881,7 +881,7 @@ fill: var(--white-color);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .modal-close-logo:hover {
+  .modal-close-btn:hover .modal-close-logo {
     fill: var(--accent-color);
   }
 
